# ottobot_ros

./: .flake8  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
.github/workflows/: ci.yaml
config/: camera_pose_controller_config.yaml  config.yaml  dataset_generator_config.yaml  dataset_visualizer_config.yaml  key_teleop_config.yaml  motor_driver_config.yaml  realsense_config.yaml
include/: node_camera_pose_controller.h
launch/: camera_pose_controller.launch  dataset_generator.launch  dataset_visualizer.launch  key_teleop_launch.launch  motor_driver_launch.launch  realsense_launch.launch
scripts/: key_teleop_node.py  motor_driver_node.py  realsense_node.py
scripts/ottobot/rgbd_camera/: base_rgbdcamera.py  realsensed435i.py
src/: node_camera_pose_controller.cpp  node_dataset_generator.py  node_dataset_visualizer.py  node_key_teleop.py  node_motor_driver.py  node_realsense.py
src/ottobot/: log.py
src/ottobot/rgbd_camera/: __init__.py  base_rgbdcamera.py  realsensed435i.py
